fix so to overflow

--- a/css/a-table.css
+++ b/css/a-table.css
@@ -4,6 +4,10 @@
   width: 100%;
 }
 
+.a-table-outer {
+  overflow-x: auto;
+}
+
 .a-table-pseudo {
   position: absolute;
   top: 0;
@@ -157,6 +161,12 @@
   position: relative;
 }
 
+.a-table-btn-group-list:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .a-table-btn-list {
   display: table;
   float: left;
@@ -191,7 +201,7 @@
   border-right: none;
 }
 
-.a-table-btn-active{
+.a-table-btn-active {
   border: 1px solid #aaa;
   background-color: #e1e1e1;
   box-shadow: inset 0 1px 2px #b2b2b2;
@@ -210,7 +220,7 @@
   border-right: 1px solid #a7a7aa;
 }
 
-.a-table-selector{
+.a-table-selector {
   -moz-appearance: none;
   -webkit-appearance: button;
   display: inline-block;
